# sparrow

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: manylinux.yml
benchmarks/: CMakeLists.txt  bench_primitive_array.cpp  benchmark.mk  run_benchmark_demo.ps1  run_benchmark_demo.sh
cmake/: external_dependencies.cmake
docs/source/: installation.md
include/sparrow/: any_data.hpp  array.hpp  arrow_array.hpp  arrow_array_schema_proxy.hpp  arrow_array_schema_utils.hpp  arrow_schema.hpp  fixed_shape_tensor_array.hpp  mp_utils.hpp  union_array.hpp
include/sparrow/arrow_interface/: arrow_array_schema_factory.hpp  arrow_array_schema_info_utils.hpp
include/sparrow/buffer/: dynamic_bitset.hpp
include/sparrow/buffer/dynamic_bitset/: dynamic_bitset_base.hpp  non_owning_bitset.hpp
include/sparrow/builder/: builder.hpp
include/sparrow/layout/: array_base.hpp  array_helper.hpp  array_wrapper.hpp  decimal_array.hpp  decimal_reference.hpp  dictionary_encoded_array.hpp  dispatch.hpp  null_array.hpp  primitive_array.hpp  primitive_array_impl.hpp  primitive_data_access.hpp  union_array.hpp
include/sparrow/layout/fixed_width_binary_layout/: fixed_width_binary_array.hpp
include/sparrow/layout/temporal/: duration_array.hpp  duration_concepts.hpp  interval_array.hpp  interval_concepts.hpp  timestamp_array.hpp
include/sparrow/types/: data_traits.hpp  data_type.hpp
include/sparrow/utils/: large_int.hpp  metadata.hpp  packing.hpp
src/: fixed_shape_tensor_array.cpp  union_array.cpp
src/layout/: null_array.cpp
test/: CMakeLists.txt  test_allocator.cpp  test_any_data.cpp  test_arrow_array.cpp  test_arrow_array_schema_proxy.cpp  test_arrow_array_schema_utils.cpp  test_arrow_schema.cpp  test_decimal_array.cpp  test_dictionary_encoded_array.cpp  test_duration_array.cpp  test_fixed_shape_tensor_array.cpp  test_interval_array.cpp  test_metadata.cpp  test_mpl.cpp  test_primitive_array.cpp  test_run_end_encoded_array.cpp  test_union_array.cpp
test/c_data_integration/: CMakeLists.txt
test/c_data_integration/src/: json_parser.cpp
test/c_data_integration/test_c_data_integration/: test_c_data_integration.cpp
test/integration/: CMakeLists.txt  c_data_integration.cpp  c_data_integration.hpp  test_c_data_integration.cpp
